crates/kula-core/tests/corpus/valid/04-couple-with-divorce.kula
person alice name:"Alice Sharma" gender:female
person bob   name:"Bob Sharma"   gender:male

marriage m_alice_bob alice bob start:1972-05-12 end:1990-08-01 end_reason:divorce
