crates/kula-core/tests/corpus/invalid/rule-13-two-cycle.kula
# A two-cycle: alice's bio parent is carol; carol's bio parent is alice.
person alice name:"Alice" gender:female
  birth m_carol_bob
person bob   name:"Bob"   gender:male
person carol name:"Carol" gender:female
  birth m_alice_dave
person dave  name:"Dave"  gender:male

marriage m_carol_bob  carol bob   start:1950-01-01
marriage m_alice_dave alice dave  start:1972-05-12
